--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/triple
+    url: jdbc:mysql://localhost:3306/triple?characterEncoding=utf8
     username: root
     password: capstone2022
 
